# imgui_plugin

./: .gitignore  .gitmodules  CMakeLists.txt
imguicolortextedit_plugin/: CMakeLists.txt
imguicolortextedit_plugin/include/: ImGuiColorTextEdit.hpp  ImGuiColorTextEditFactory.hpp  ImGuiColorTextEditPlugin.hpp
imguicolortextedit_plugin/src/: ImGuiColorTextEdit.cpp  ImGuiColorTextEditFactory.cpp  ImGuiColorTextEditPlugin.cpp
include/: Button.hpp  ComboBox.hpp  ComboBoxItem.hpp  Component.hpp  GenericComponentContainer.hpp  Gui.hpp  GuiFactory.hpp  GuiPlugin.hpp  Label.hpp  MainMenuBar.hpp  Menu.hpp  MenuBar.hpp  MenuItem.hpp  PopupModal.hpp  Rectangle.hpp  Separator.hpp  TextArea.hpp  TextField.hpp  TreeNode.hpp  TreeView.hpp  Window.hpp  imgui_impl_sdl_gl3.h
include/detail/: GlmToImgui.hpp
include/imguicolortextedit/: ITextEditor.hpp  ITextEditorFactory.hpp  TextEditor.hpp
src/: Button.cpp  ComboBox.cpp  ComboBoxItem.cpp  Component.cpp  GenericComponentContainer.cpp  Gui.cpp  GuiFactory.cpp  GuiPlugin.cpp  Label.cpp  MainMenuBar.cpp  Menu.cpp  MenuBar.cpp  MenuItem.cpp  PopupModal.cpp  Separator.cpp  TextArea.cpp  TextField.cpp  TreeNode.cpp  TreeView.cpp  Window.cpp  imgui_impl_sdl_gl3.cpp
src/imguicolortextedit/: TextEditor.cpp
